[build-system]
requires = ["scikit-build-core", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "openalea.lpy"
authors = [
    {name = "Frederic Boudon"}
]
description = "Lindenmayer Systems in Python package for OpenAlea."
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
license-files = ["LICEN[CS]E*", "src/cpp/LICENSE"]
# version = "1.0.2"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "pandas",
  "scipy",
]

[project.optional-dependencies]
doc = [
  "sphinx",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "nbsphinx",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon"
]
notebook = [
  "jupyter",
  "ipywidgets"
]
test = [
  "pytest",
  "pytest-cov",
]

[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "openalea.plantgl",
]

[tool.setuptools_scm]
# Format version to ease alignment with conda/meta.yaml tag-based versioning
fallback_version = "3.14.1.dev0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build-dir="./build/{wheel_tag}"
sdist.include = ["*.so", "*.dylib", "*.dll", "*.pyd", '*.lpy','*.ui','*.qrc','*.json','*.png']
sdist.exclude = ["*.pyc", "*.pyo"]
logging.level = "WARNING"
build.verbose = true
experimental = true

[tool.scikit-build.cmake]
build-type="Release"
source-dir="."

[tool.scikit-build.wheel]
packages = ["src/openalea"]


[project.urls]
Homepage = "https://github.com/openalea/lpy"
"Bug Tracker" = "https://github.com/openalea/lpy/issues"
Discussions = "https://github.com/openalea/lpy/discussions"
Changelog = "https://github.com/openalea/lpy/releases"

[project.entry-points."wralea"]
"lpy" = "openalea.lpy_wralea"

[project.entry-points."gui_scripts"]
"lpy" = "openalea.lpy.gui.lpystudio:main"

[project.entry-points."console_scripts"]
"cpfg2lpy" = "openalea.lpy.cpfg_compat.cpfg2lpy:main"
